2005-09-09  Frederic Ruaudel <grumz@grumz.net> 0.7
	* po/nautilus-actions.pot: Generate the translation message list file

	* configure.in: Remove useless dependencies

	* Makefile.am: add intltool tool in EXTRA_DIST options

	* po/POTFILES.in: Update list of files containing translatable strings.

	* nact/nautilus-actions-config.glade: Unmark untranslatable string in glade (indent spaces,
program name, etc.)

	* config/Makefile.am:
	* config/config_newaction.xml : 
	* config/config_newaction.xml.in: replace config/config_newaction.xml by 
config/config_newaction.xml.in to add i18n support. And modify Makefile.am to 
add intltool operations.

	* nact/nact.desktop.in.in: Add i18n support and fix the @autotools_vars@ substitution.
Still have problem with @datadir@ expanding in ${prefix}.

	* MAINTAINERS: Add the list of maintainers

	* README: Add information about the project

2005-09-07  Frederic Ruaudel <grumz@grumz.net> 0.6

	* plugin/nautilus-actions-utils.c: modify nautilus_actions_utils_parse_parameter ()
to quote every filenames and folder names and url decode Gnome-vfs URIs. Fix the problem
about last characters of the paramters not set if the parameter string don't finish by a 
%? pattern which cause the quote bug (Bug #32)

	* nact/nautilus-actions-config.in: Fix display of the example string in
ParseParameters() function. The last character was missing if not a %? pattern.

	* nact/nautilus-actions-config.in: Fix problem with old config file migration 
and add migration to the new folder (Bug #90)

	* nact/nautilus-actions-config.in:
	* plugin/nautilus-actions-config.h: change the default per user config directory
from ~/.config/.nautilus-actions to ~/.config/nautilus-actions.

	* nact/Makefile.am:
	* nact/nautilus-actions-config.in: Move nact files in nact subdir of system wide 
config folder

	* config/config_newaction.xml:
	* nact/nact.desktop.in.in: Change name of the executable from nact to nautilus-actions-config

	* README: